# artistscraper

./: .gitignore  .gitmodules  CHANGELOG_YOUTUBE_FIX.md  LICENSE  README.md  YOUTUBE_MUSIC_SETUP.md  config.example.json  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: cd.yml  ci.yml  docs.yml  release.yml
artistscraper/: __main__.py  config.py  exporter.py  lidarr_client.py  musicbrainz_lookup.py  spotify_fetcher.py  youtube_music_fetcher.py
docs_site/: changelog.md  index.md  troubleshooting.md
docs_site/configuration/: lidarr.md  musicbrainz.md  overview.md  spotify.md  youtube-music.md
docs_site/installation/: pypi.md  quick-start.md  source.md
docs_site/usage/: import.md  output.md  scrape.md
