[project]
name = "artistscraper"
version = "0.1.0"
description = "Fetch artists from YouTube Music and Spotify with MusicBrainz IDs"
authors = [
    {name = "lennarddevries",email = "lennard.devries@me.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["spotify", "youtube-music", "musicbrainz", "lidarr", "music", "artists", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "ytmusicapi (>=1.11.2,<2.0.0)",
    "spotipy>=2.23.0",
    "musicbrainzngs>=0.7.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0"
]

[project.urls]
Homepage = "https://github.com/lennarddevries/artistscraper"
Repository = "https://github.com/lennarddevries/artistscraper"
Issues = "https://github.com/lennarddevries/artistscraper/issues"

[project.scripts]
artistscraper = "artistscraper.__main__:cli_main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
