[project]
name = "artistscraper"
version = "1.1.2"
description = "Fetch artists from YouTube Music and Spotify with MusicBrainz IDs"
authors = [
    {name = "lennarddevries",email = "lennard.devries@me.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["spotify", "youtube-music", "musicbrainz", "lidarr", "music", "artists", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "ytmusicapi (>=1.11.2,<2.0.0)",
    "spotipy>=2.23.0",
    "musicbrainzngs>=0.7.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0"
]

[project.urls]
Homepage = "https://github.com/lennarddevries/artistscraper"
Repository = "https://github.com/lennarddevries/artistscraper"
Issues = "https://github.com/lennarddevries/artistscraper/issues"

[project.scripts]
artistscraper = "artistscraper.__main__:cli_main"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.4.1"
mypy = "^1.9.0"
types-requests = "^2.31.0.20240311"

[tool.ruff]
line-length = 88
select = ["I"]

[tool.black]
line-length = 88

[tool.mypy]
[[tool.mypy.overrides]]
module = "musicbrainzngs"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "spotipy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "spotipy.oauth2"
ignore_missing_imports = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = true
branch = "main"
hvcs = "github"
build_command = "pip install poetry && poetry build"
upload_to_vcs_release = true
tag_commit = true
commit_version_number = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.changelog]
default_templates.changelog_file = "CHANGELOG.md"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
upload_to_repository = true

[tool.semantic_release.publish.upload_to_repository_config]
repository_url = "https://upload.pypi.org/legacy/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
